--- a/RevisionPages/Data.html
+++ b/RevisionPages/Data.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link type="text/css" href="../css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
+
 <body class="Data">
-<div class="navigation">
+  <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -14,104 +16,98 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-</div>
-<div class="container" id="home">
+  </div>
+  <div class="container" id="home">
     <div class="row text-center">
-        <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DATA</h1>
-            <h2 class="head-sub-main">A Level Computer Science</h2>
-        </div>
+      <div class="col-md-12">
+        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DATA</h1>
+        <h2 class="head-sub-main">A Level Computer Science</h2>
+      </div>
     </div>
-</div>
-</div>
-<section class="color-white " id="about"  >
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Floating Point Arithmetic</h2>
+  </div>
+  </div>
+  <section class="color-white " id="about">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2 style="padding-top:50px;">Floating Point Arithmetic</h2>
 
-                <a href="https://goo.gl/tyJh7I">
+          <a href="https://goo.gl/tyJh7I">
                     <img src="images/Computer_Misuse_Act.gif" alt="CMA">
                 </a>
-                <p>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
+          <p>
+            <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
                     The act makes it illegal to carry out any of the following:</h3>
-                </p>
-                <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-                </ol>
-                <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
-                </p>
+          </p>
+          <ol class="row text-left">
+            <li>Unauthorised access to computer material</li>
+            <li>Unauthorised access with intent to commit or facilitate a crime</li>
+            <li>Unauthorised modification of computer material</li>
+            <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
+          </ol>
+          <p class="spacing-small">
+            The act works in tiers, so each act has more severe consequences than the last. For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br> Before 1990, there was no protection
+            against data theft or modification, meaning there was nothing that could be done <br> to punish cyber criminals. This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn
+            more.
+          </p>
 
-            </div>
         </div>
+      </div>
     </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
+  </section>
+  <section class=" color-light">
+    <div class="container">
 
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Advanced Boolean Algebra</h2>
-                <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-                <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
-
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Advanced Boolean Algebra</h2>
+          <p>
+            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+            <ul class="row text-left">
+              <li>Personal data should be obtained and processed fairly amnd lawfully </li>
+              <li>Personal data can be held only for specified and lawful purposes </li>
+              <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
+              <li>Personal data should be accurate and kept up-to-date </li>
+              <li>Personal data should not be kept for longer than is necessary </li>
+              <li>Data must be processed in accordance with the rights of the data subject </li>
+              <li>Appropriate security measures must be taken against unauthorised access </li>
+              <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
+            </ul>
+            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+            force will need to know if new recruits have any previous criminal convictions.
+          </p>
         </div>
+
+      </div>
     </div>
-</section>
-<section class="color-white " id="work-sec"  >
-    <div class="container" >
+  </section>
+  <section class="color-white " id="work-sec">
+    <div class="container">
 
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2>Boolean Applications</h2>
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2>Boolean Applications</h2>
 
-                <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
-                The main purpose of this act is to provide restraints for security services
-                and the police when investigating and surveying digital data and communications of individuals.
-                The act also makes it a crime for anyone unauthorised by the act to carry out surveilance and monitoring of communicatons.
-                The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place
-                to prevent abuses of power by organisations regarding the interception of electronic communications.
-                It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy.
-                As a result, the act was passed.
-                <p>
-                <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
-                <ul class ="row text-left">
-                    <li>Prevent or detect crimes</li>
-                    <li>Prevent public disorder from occurring</li>
-                    <li>To ensure national security and the safety of the general public</li>
-                    <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
-                </ul>
-            </div>
+          <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3> The main purpose of this act is to provide restraints for security services and the police when investigating and surveying digital data and communications of individuals. The act also makes it a crime for anyone unauthorised by the act to
+          carry out surveilance and monitoring of communicatons. The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place to prevent abuses of power by organisations regarding the interception
+          of electronic communications. It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy. As a result, the act was passed.
+          <p>
+            <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
+              <ul class="row text-left">
+                <li>Prevent or detect crimes</li>
+                <li>Prevent public disorder from occurring</li>
+                <li>To ensure national security and the safety of the general public</li>
+                <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
+              </ul>
         </div>
-        <div class="row text-center g-pad-bottom" >
-            <div class="col-md-4">
-            </div>
-</section>
-</div>
-<h4 align="right">James McNicholas 2017</h4>
+      </div>
+      <div class="row text-center g-pad-bottom">
+        <div class="col-md-4">
+        </div>
+  </section>
+  </div>
+  <h4 align="right">James McNicholas 2017</h4>
 </body>
+
 </html>
