--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link type="text/css" href="../css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 </head>
+
 <body class="Processing">
-<div class="navigation">
+  <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -15,75 +17,74 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-</div>
-<div class="container" id="home">
+  </div>
+  <div class="container" id="home">
     <div class="row text-center">
-        <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROCESSING</h1>
-            <h2 class="head-sub-main">A Level Computer Science</h2>
-        </div>
+      <div class="col-md-12">
+        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROCESSING</h1>
+        <h2 class="head-sub-main">A Level Computer Science</h2>
+      </div>
     </div>
-</div>
-</div>
-<section class="color-white " id="about"  >
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">GPUs</h2>
+  </div>
+  </div>
+  <section class="color-white " id="about">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2 style="padding-top:50px;">GPUs</h2>
 
-                <a href="https://goo.gl/tyJh7I">
+          <a href="https://goo.gl/tyJh7I">
                     <img src="images/Computer_Misuse_Act.gif" alt="CMA">
                 </a>
-                <p>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
+          <p>
+            <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
                     The act makes it illegal to carry out any of the following:</h3>
-                </p>
-                <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-                </ol>
-                <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
-                </p>
-
-            </div>
-        </div>
-    </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
-
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Pipelining and Parallel Processing</h2>
-                <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-                <ul class="row text-left">
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                  <li>Placeholder text</li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
+          </p>
+          <ol class="row text-left">
+            <li>Unauthorised access to computer material</li>
+            <li>Unauthorised access with intent to commit or facilitate a crime</li>
+            <li>Unauthorised modification of computer material</li>
+            <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
+          </ol>
+          <p class="spacing-small">
+            The act works in tiers, so each act has more severe consequences than the last. For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br> Before 1990, there was no protection
+            against data theft or modification, meaning there was nothing that could be done <br> to punish cyber criminals. This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn
+            more.
+          </p>
 
         </div>
+      </div>
     </div>
-</section>
-</div>
-<h4 align="right">James McNicholas 2017</h4>
+  </section>
+  <section class=" color-light">
+    <div class="container">
+
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Pipelining and Parallel Processing</h2>
+          <p>
+            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+            <ul class="row text-left">
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+            </ul>
+            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+            force will need to know if new recruits have any previous criminal convictions.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  </div>
+  <h4 align="right">James McNicholas 2017</h4>
 </body>
+
 </html>
