--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link type="text/css" href="../css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
+
 <body class="Programming">
-<div class="navigation">
+  <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -15,146 +17,137 @@
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
 
-</div>
-<div class="container" id="home">
+  </div>
+  <div class="container" id="home">
     <div class="row text-center">
-        <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROGRAMMING</h1>
-            <h2 class="head-sub-main">A Level Computer Science</h2>
-        </div>
+      <div class="col-md-12">
+        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROGRAMMING</h1>
+        <h2 class="head-sub-main">A Level Computer Science</h2>
+      </div>
     </div>
-</div>
-</div>
-<section class="color-white " id="about"  >
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Object Oriented Programming - Fundamentals</h2>
-                <h3>Many modern languages are based around OOP, including Java, C++, Python & more<p>The basics are as followed:</h3>
-                <ol class="spacing-small" style="text-align: left">
-                    <h4 style="background-color:#f9ce36">The five basic OOP principles</h4>
-                    <li>Code is divided up into <b>objects</b> which contain variables (referred to as <b>attributes</b>) and functions (known as <b>methods</b>)</li>
-                    <li>Objects are made from "blueprints" called <b>classes</b>. Objects are an instance of a class</li>
-                    <li>Objects can interact with each other via <b>public</b> methods or attributes</li>
-                    <li>Methods and attributes can be hidden from other classes by setting them as <b>private</b></li>
-                    <li>The bundling of methods and attributes into objects with access control is called <b>encapsulation</b></li>
-                    <p>
-                </ol>
-                <p></p>
-                <p class="paragraph-small">
-                    Object oriented code works on dividing up projects into objects, consisting of attributes and
-                    methods. Objects are instances of classes, and can interact with each other through public methods
-                    or attributes. Object oriented programming is good for modeling real life situations. The use of classes
-                    and methods allows developers to easily break down problems into much smaller and easier-to-solve chunks.
-                    You can encapsulate methods and attributes into objects with access control. Some of
-                    the basic definitions of OOP terms can be found below.
-                </p>
-                <p>
+  </div>
+  </div>
+  <section class="color-white " id="about">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2 style="padding-top:50px;">Object Oriented Programming - Fundamentals</h2>
+          <h3>Many modern languages are based around OOP, including Java, C++, Python & more<p>The basics are as followed:</h3>
+          <ol class="spacing-small" style="text-align: left">
+            <h4 style="background-color:#f9ce36">The five basic OOP principles</h4>
+            <li>Code is divided up into <b>objects</b> which contain variables (referred to as <b>attributes</b>) and functions (known as <b>methods</b>)</li>
+            <li>Objects are made from "blueprints" called <b>classes</b>. Objects are an instance of a class</li>
+            <li>Objects can interact with each other via <b>public</b> methods or attributes</li>
+            <li>Methods and attributes can be hidden from other classes by setting them as <b>private</b></li>
+            <li>The bundling of methods and attributes into objects with access control is called <b>encapsulation</b></li>
+            <p>
+          </ol>
+          <p></p>
+          <p class="paragraph-small">
+            Object oriented code works on dividing up projects into objects, consisting of attributes and methods. Objects are instances of classes, and can interact with each other through public methods or attributes. Object oriented programming is good for modeling
+            real life situations. The use of classes and methods allows developers to easily break down problems into much smaller and easier-to-solve chunks. You can encapsulate methods and attributes into objects with access control. Some of the basic
+            definitions of OOP terms can be found below.
+          </p>
+          <p>
 
-                <ul>
-                  <h4 style="background-color:#f9ce36">Some key terms that are essential for OOP</h4>
-                    <li>Classes and Objects - Classes provide a template or blueprint for objects. Objects are an instance of a class.</li>
-                    <li>Attributes - Attributes are properties or characteristics of objects, given in the form of variables</li>
-                    <li>Methods - Methods are actions of objects, given in the form of procedures or subroutines</li>
-                    <li>Constructor - The default method of a class that creates a new instance of an object</li>
-                    <li>Access Modifiers - Determine whether parts of the program can be accessed outside their respective class (Public/Private)</li>
-                    <li>Encapsulation - “Hiding” certain parts of the program from others. This prevents parts of the program outside the class from directly accessing it</li>
-                    <li>Accessor Methods - Methods that pass private attributes of an object outside the class</li>
-                    <li>Static vs Instance - Static methods are not linked to a specific object, but instead belong to the class. Instance methods are linked to an instance of a class (A specific object)</li>
-                    <li>Value vs Reference - Value data types make a copy of the original data and pass that through. This means the original is not affected. By reference data types refer to the memory location of the data, meaning the value changes when updated.</li>
-                    <li>Refactoring - Changing the layout or format of code to make it more efficient or tidier, but not changing the functionality</li>
-                    <p>
-                </ul>
-            </div>
+            <ul>
+              <h4 style="background-color:#f9ce36">Some key terms that are essential for OOP</h4>
+              <li>Classes and Objects - Classes provide a template or blueprint for objects. Objects are an instance of a class.</li>
+              <li>Attributes - Attributes are properties or characteristics of objects, given in the form of variables</li>
+              <li>Methods - Methods are actions of objects, given in the form of procedures or subroutines</li>
+              <li>Constructor - The default method of a class that creates a new instance of an object</li>
+              <li>Access Modifiers - Determine whether parts of the program can be accessed outside their respective class (Public/Private)</li>
+              <li>Encapsulation - “Hiding” certain parts of the program from others. This prevents parts of the program outside the class from directly accessing it</li>
+              <li>Accessor Methods - Methods that pass private attributes of an object outside the class</li>
+              <li>Static vs Instance - Static methods are not linked to a specific object, but instead belong to the class. Instance methods are linked to an instance of a class (A specific object)</li>
+              <li>Value vs Reference - Value data types make a copy of the original data and pass that through. This means the original is not affected. By reference data types refer to the memory location of the data, meaning the value changes when updated.</li>
+              <li>Refactoring - Changing the layout or format of code to make it more efficient or tidier, but not changing the functionality</li>
+              <p>
+            </ul>
         </div>
+      </div>
     </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
+  </section>
+  <section class=" color-light">
+    <div class="container">
 
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Object Oriented Programming - Inheritance</h2>
-                <p>
-                <h3>Inheritance allows classes to extend features and properties from others</h3>
-                <ul class="row text-left">
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
-
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Object Oriented Programming - Inheritance</h2>
+          <p>
+            <h3>Inheritance allows classes to extend features and properties from others</h3>
+            <ul class="row text-left">
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+            </ul>
+            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+            force will need to know if new recruits have any previous criminal convictions.
+          </p>
         </div>
+
+      </div>
     </div>
-</section>
-<section class="color-white " id="work-sec"  >
-    <div class="container" >
+  </section>
+  <section class="color-white " id="work-sec">
+    <div class="container">
 
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2>Types of Languages</h2>
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2>Types of Languages</h2>
 
-                <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
-                The main purpose of this act is to provide restraints for security services
-                and the police when investigating and surveying digital data and communications of individuals.
-                The act also makes it a crime for anyone unauthorised by the act to carry out surveilance and monitoring of communicatons.
-                The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place
-                to prevent abuses of power by organisations regarding the interception of electronic communications.
-                It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy.
-                As a result, the act was passed.
-                <p>
-                <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
-                <ul class ="row text-left">
-                    <li>Prevent or detect crimes</li>
-                    <li>Prevent public disorder from occurring</li>
-                    <li>To ensure national security and the safety of the general public</li>
-                    <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
-                </ul>
-            </div>
+          <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3> The main purpose of this act is to provide restraints for security services and the police when investigating and surveying digital data and communications of individuals. The act also makes it a crime for anyone unauthorised by the act to
+          carry out surveilance and monitoring of communicatons. The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place to prevent abuses of power by organisations regarding the interception
+          of electronic communications. It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy. As a result, the act was passed.
+          <p>
+            <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
+              <ul class="row text-left">
+                <li>Prevent or detect crimes</li>
+                <li>Prevent public disorder from occurring</li>
+                <li>To ensure national security and the safety of the general public</li>
+                <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
+              </ul>
         </div>
-        <div class="row text-center g-pad-bottom" >
-            <div class="col-md-4">
-            </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
-
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Recursion</h2>
-                <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-                <ul class="row text-left">
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
-
+      </div>
+      <div class="row text-center g-pad-bottom">
+        <div class="col-md-4">
         </div>
+  </section>
+  <section class=" color-light">
+    <div class="container">
+
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Recursion</h2>
+          <p>
+            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+            <ul class="row text-left">
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+              <li>Placeholder text</li>
+            </ul>
+            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+            force will need to know if new recruits have any previous criminal convictions.
+          </p>
+        </div>
+
+      </div>
     </div>
-</section>
-</div>
-<h4 align="right">James McNicholas 2017</h4>
+  </section>
+  </div>
+  <h4 align="right">James McNicholas 2017</h4>
 </body>
+
 </html>
