--- a/RevisionPages/Development.html
+++ b/RevisionPages/Development.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link type="text/css" href="../css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <title>Development</title>
+  <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <title>Development</title>
 </head>
+
 <body class="Development">
-<div class="navigation">
+  <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -15,85 +17,82 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-</div>
-<div class="container" id="home">
+  </div>
+  <div class="container" id="home">
     <div class="row text-center">
-        <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DEVELOPMENT</h1>
-            <h2 class="head-sub-main">A Level Computer Science</h2>
-        </div>
+      <div class="col-md-12">
+        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DEVELOPMENT</h1>
+        <h2 class="head-sub-main">A Level Computer Science</h2>
+      </div>
     </div>
-</div>
-</div>
-<section class="color-white " id="about">
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Stages of Compilation</h2>
-                <p>
-                <h3>Stages of compilation</h3>
-                </p>
-                <ul>
-                    <h4 style="background-color:#36f150">The 7 stages in which compilation occurs</h4>
-                    <li>Lexical Analysis</li>
-                    <li>Syntax Analysis</li>
-                    <li>Semantic Analysis</li>
-                    <li>Intermediate Code Generation</li>
-                    <li>Intermediate Code Optmisation</li>
-                    <li>Machine code generation</li>
-                    <li>Machine code optimisation</li>
-                    <p>
-                </ul>
-                <p>
-                  <h3>Source code analysis</h3>
-                </p>
-                <p class="paragraph-small">
-                  Source code is found on the hard drive. It is moved into the compiler, all the unnecessary comments of whitespace is removed.Next comes the optimisation,
-                  in which long or complicated procedures are broken down into their fundamental parts. The code is then analysed and any errors found in the form of
-                  Syntax, Semantic, or Lexical are detected, and will stop compilation. Once there are no more errors, the code is then compiled.
-                </p>
-                <ul>
-                    <h4 style="background-color:#36f150">Lexical Analysis</h4>
-                    <li>Source code is stripped of anything unnecessary (e.g. whitespace and comments)</li>
-                    <li>Code is divided into <b>lexemes</b> (Smallest possible pieces of code)</li>
-                    <li>Lexical analyser tries to assign a <b>token</b> to each lexeme.</li>
-                    <li>Tokens include: Identifiers, Keywords, Operators, Literals & Symbols</li>
-                    <li>The end result is a list of lexeme:token pairs</li>
-                    <li>If a lexeme cannot be assigned a token, an error is raised</li>
+  </div>
+  </div>
+  <section class="color-white " id="about">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2 style="padding-top:50px;">Stages of Compilation</h2>
+          <p>
+            <h3>Stages of compilation</h3>
+          </p>
+          <ul>
+            <h4 style="background-color:#36f150">The 7 stages in which compilation occurs</h4>
+            <li>Lexical Analysis</li>
+            <li>Syntax Analysis</li>
+            <li>Semantic Analysis</li>
+            <li>Intermediate Code Generation</li>
+            <li>Intermediate Code Optmisation</li>
+            <li>Machine code generation</li>
+            <li>Machine code optimisation</li>
+            <p>
+          </ul>
+          <p>
+            <h3>Source code analysis</h3>
+          </p>
+          <p class="paragraph-small">
+            Source code is found on the hard drive. It is moved into the compiler, all the unnecessary comments of whitespace is removed.Next comes the optimisation, in which long or complicated procedures are broken down into their fundamental parts. The code is
+            then analysed and any errors found in the form of Syntax, Semantic, or Lexical are detected, and will stop compilation. Once there are no more errors, the code is then compiled.
+          </p>
+          <ul>
+            <h4 style="background-color:#36f150">Lexical Analysis</h4>
+            <li>Source code is stripped of anything unnecessary (e.g. whitespace and comments)</li>
+            <li>Code is divided into <b>lexemes</b> (Smallest possible pieces of code)</li>
+            <li>Lexical analyser tries to assign a <b>token</b> to each lexeme.</li>
+            <li>Tokens include: Identifiers, Keywords, Operators, Literals & Symbols</li>
+            <li>The end result is a list of lexeme:token pairs</li>
+            <li>If a lexeme cannot be assigned a token, an error is raised</li>
 
-                    <h4 style="background-color:#36f150">Syntax Analysis</h4>
-                    <li>The stream of generated tokens from the previous process is analysed</li>
-                    <li>The tokens are checked against the rules of the language</li>
-                    <li>Any failures raise an error, e.g. two different data types in one declaration</li>
-                    <li><a href=Computation.html>Tree based data structures</a> are often used in this process</li>
+            <h4 style="background-color:#36f150">Syntax Analysis</h4>
+            <li>The stream of generated tokens from the previous process is analysed</li>
+            <li>The tokens are checked against the rules of the language</li>
+            <li>Any failures raise an error, e.g. two different data types in one declaration</li>
+            <li><a href=Computation.html>Tree based data structures</a> are often used in this process</li>
 
-                    <h4 style="background-color:#36f150">Semantic Analysis</h4>
-                    <li>The code is now checked for logical errors</li>
-                    <li>Examples include type mismatch, e.g. assigning an integer to a String</li>
-                    <li>Undeclared variables or trying to access a variable out of scope</li>
-                    <li>Multiple declarations of the same variable in the same scope</li>
-                    <li>Accessing an array with an index out of bounds</li>
-                    <li>As before, an error is returned if a rule is broken</li>
-                    <li>Not all semantic errors can be caught during compilation</li>
-                    <li>Run time errors such as out of bounds integer variable will not be prevented by this step</li>
-                    <p>
-                </ul>
-                <p>
-                  <h3>Code generation and compilation</h3>
-                  <p></p>
-                  <p class='paragraph-small'>This is also where the code is converted into an intermediary language, such as bytecode for Java. At this point, it is determined whether or not the program
-                  will include libraries
-                  within the compiled file. If so, the static linker will fetch the static libraries and add them to the program loader. If the libraries will instead be
-                  dynamic, this step will be skipped for now. Once in the program loader, the dynamic linker will add .dll files to the program. These libraries are dynamic,
-                  so are not included with the compiled program, This means they must be present when the file is executed for the program to fnunction correctly. Once this
-                  process has finished, the loader loads the file into RAM.
-                  </p>
-                  <img src='../img/loader.png'>
-            </div>
+            <h4 style="background-color:#36f150">Semantic Analysis</h4>
+            <li>The code is now checked for logical errors</li>
+            <li>Examples include type mismatch, e.g. assigning an integer to a String</li>
+            <li>Undeclared variables or trying to access a variable out of scope</li>
+            <li>Multiple declarations of the same variable in the same scope</li>
+            <li>Accessing an array with an index out of bounds</li>
+            <li>As before, an error is returned if a rule is broken</li>
+            <li>Not all semantic errors can be caught during compilation</li>
+            <li>Run time errors such as out of bounds integer variable will not be prevented by this step</li>
+            <p>
+          </ul>
+          <p>
+            <h3>Code generation and compilation</h3>
+            <p></p>
+            <p class='paragraph-small'>This is also where the code is converted into an intermediary language, such as bytecode for Java. At this point, it is determined whether or not the program will include libraries within the compiled file. If so, the static linker will fetch
+              the static libraries and add them to the program loader. If the libraries will instead be dynamic, this step will be skipped for now. Once in the program loader, the dynamic linker will add .dll files to the program. These libraries are
+              dynamic, so are not included with the compiled program, This means they must be present when the file is executed for the program to fnunction correctly. Once this process has finished, the loader loads the file into RAM.
+            </p>
+            <img src='../img/loader.png'>
         </div>
+      </div>
     </div>
-</section>
-</div>
-<h4 align="right">James McNicholas 2017</h4>
+  </section>
+  </div>
+  <h4 align="right">James McNicholas 2017</h4>
 </body>
+
 </html>
