--- a/RevisionPages/Systems.html
+++ b/RevisionPages/Systems.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link type="text/css" href="../css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
+
 <body class="Systems">
-<div class="navigation">
+  <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -14,86 +16,84 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-</div>
-<div class="container" id="home">
+  </div>
+  <div class="container" id="home">
     <div class="row text-center">
-        <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>SYSTEMS</h1>
-            <h2 class="head-sub-main">A Level Computer Science</h2>
-        </div>
+      <div class="col-md-12">
+        <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>SYSTEMS</h1>
+        <h2 class="head-sub-main">A Level Computer Science</h2>
+      </div>
     </div>
-</div>
-</div>
-<section class="color-white " id="about"  >
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Database Systems</h2>
-                <h3>Databases are a great way of storing and relating relational data. The main language used for databases is SQL</h3>
-                <ol class="spacing-small" style="text-align: left">
-                    <li>SELECT - Allows "selection" of a set of data from a database</li>
-                    <li>UPDATE - Modifies selected data</li>
-                    <li>DELETE - Deletes selected data</li>
-                    <li>INSERT INTO - Insert new data into an existing database</li>
-                    <li>FROM - Chooses the table from which to select data</li>
-                    <li>WHERE - Allows constraints for selection, i.e. WHERE Country="England"</li>
-                </ol>
-                <p>
-                </p>
-                <h2>Normalisation</h2>
-                <p class="paragraph-small">
-                    While being able to set up a database with the reqired SQL is functional, many programs such as SQLite or Microsoft
-                    Access provide tools to make this easier. However, being able to set up a set of tables isn't what makes a good
-                    database; this is where normalisation comes in. There are three 'forms' to databases, first, second, and third normal form.
-                    Each provides a set of criteria to reduce data inconsistencies and prevent repeated entries.
-                </p>
-                <p>
-                </p>
-                <p class="paragraph-small" style="">
-                  <ul>
-                    <h4 style="background-color:#f99436">First normal form focuses on several key concepts:</h4>
-                    <li>Each row must be unique (must have a primary key)</li>
-                    <li>Each field (column) must have a unique name</li>
-                    <li>Each column must not contain similar or repeated data</li>
-                    <li>Each data item must not be able to be further broken down (e.g addresses)</li>
-                    <h4 style="background-color:#f99436">Second normal form only applies to tables with composite primary keys:</h4>
-                    <li>Non-Key attributes must depend on every part of the primary key</li>
-                    <h4 style="background-color:#f99436">Third normal form builds on second normal form:</h4>
-                    <li>There are no non-key attributes that depend on another non-key attribute</li>
-                  </ul>
-                </p>
+  </div>
+  </div>
+  <section class="color-white " id="about">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-8 col-md-offset-2 ">
+          <h2 style="padding-top:50px;">Database Systems</h2>
+          <h3>Databases are a great way of storing and relating relational data. The main language used for databases is SQL</h3>
+          <ol class="spacing-small" style="text-align: left">
+            <li>SELECT - Allows "selection" of a set of data from a database</li>
+            <li>UPDATE - Modifies selected data</li>
+            <li>DELETE - Deletes selected data</li>
+            <li>INSERT INTO - Insert new data into an existing database</li>
+            <li>FROM - Chooses the table from which to select data</li>
+            <li>WHERE - Allows constraints for selection, i.e. WHERE Country="England"</li>
+          </ol>
+          <p>
+          </p>
+          <h2>Normalisation</h2>
+          <p class="paragraph-small">
+            While being able to set up a database with the reqired SQL is functional, many programs such as SQLite or Microsoft Access provide tools to make this easier. However, being able to set up a set of tables isn't what makes a good database; this is where
+            normalisation comes in. There are three 'forms' to databases, first, second, and third normal form. Each provides a set of criteria to reduce data inconsistencies and prevent repeated entries.
+          </p>
+          <p>
+          </p>
+          <p class="paragraph-small" style="">
+            <ul>
+              <h4 style="background-color:#f99436">First normal form focuses on several key concepts:</h4>
+              <li>Each row must be unique (must have a primary key)</li>
+              <li>Each field (column) must have a unique name</li>
+              <li>Each column must not contain similar or repeated data</li>
+              <li>Each data item must not be able to be further broken down (e.g addresses)</li>
+              <h4 style="background-color:#f99436">Second normal form only applies to tables with composite primary keys:</h4>
+              <li>Non-Key attributes must depend on every part of the primary key</li>
+              <h4 style="background-color:#f99436">Third normal form builds on second normal form:</h4>
+              <li>There are no non-key attributes that depend on another non-key attribute</li>
+            </ul>
+          </p>
 
-            </div>
         </div>
+      </div>
     </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
+  </section>
+  <section class=" color-light">
+    <div class="container">
 
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Database Transactions</h2>
-                <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-                <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
+      <div class="row text-center">
+        <div class="col-md-12">
+          <h2>Database Transactions</h2>
+          <p>
+            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+            <ul class="row text-left">
+              <li>Personal data should be obtained and processed fairly amnd lawfully </li>
+              <li>Personal data can be held only for specified and lawful purposes </li>
+              <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
+              <li>Personal data should be accurate and kept up-to-date </li>
+              <li>Personal data should not be kept for longer than is necessary </li>
+              <li>Data must be processed in accordance with the rights of the data subject </li>
+              <li>Appropriate security measures must be taken against unauthorised access </li>
+              <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
+            </ul>
+            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+            force will need to know if new recruits have any previous criminal convictions.
+          </p>
         </div>
+      </div>
     </div>
-</section>
-<h4>James McNicholas 2017</h4>
+  </section>
+  <h4>James McNicholas 2017</h4>
 </body>
+
 </html>
